it's finally over with this course, I'm so happy!

--- a/4st semester/C++ structures and algorithms/coursework/coursework/coursework.vcxproj.filters
+++ b/4st semester/C++ structures and algorithms/coursework/coursework/coursework.vcxproj.filters
@@ -15,15 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="coursework.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="coursework.cpp">
+    <ClCompile Include="Train.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Depot.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Railway.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
